crates/a2s/tests/snapshots/snapshot_test__0__172_111_51_218_2402_info_roundtrip.snap
---
source: crates/a2s/tests/snapshot_test.rs
expression: reparsed
---
Info {
    protocol: 17,
    name: "DayOne Chernarus 1PP (No Bases|Adventure)",
    map: "chernarusplus",
    folder: "dayz",
    game: "Vanilla-ish with no base building. Have an adventure! https://d",
    app_id: AppId(
        0,
    ),
    players: 31,
    max_players: 80,
    bots: 0,
    server_type: Dedicated,
    server_os: Windows,
    visibility: false,
    vac: true,
    the_ship: None,
    version: "1.28.161464",
    edf: 177,
    extended_server_info: ExtendedServerInfo {
        port: Some(
            2402,
        ),
        steam_id: Some(
            SteamId(
                90282752995759117,
            ),
        ),
        keywords: Some(
            "battleye,no3rd,external,privHive,shard111,lqs0,etm3.000000,entm4.000000,mod,08:01",
        ),
        game_id: Some(
            GameId(
                221100,
            ),
        ),
    },
    source_tv: None,
}
