crates/a2s/tests/snapshots/snapshot_test__0__172_111_51_218_2402_players.snap
---
source: crates/a2s/tests/snapshot_test.rs
expression: players
---
[
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 9254.22,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 9253.848,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 9237.583,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 9233.852,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 9080.361,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 8942.687,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 8786.59,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 8266.504,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 8026.8755,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 7672.7896,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 7577.468,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 7255.958,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 6570.0967,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 5146.9595,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 4910.7563,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 4604.7866,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 4118.499,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2337.029,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2283.4375,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2272.246,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2268.0808,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1503.4794,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1232.7346,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1160.6506,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1126.0973,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1125.7654,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 962.63025,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 832.996,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 609.2095,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 504.7125,
        the_ship: None,
    },
]
