crates/a2s/tests/snapshots/snapshot_test__0__193_25_252_55_27016_info.snap
---
source: crates/a2s/tests/snapshot_test.rs
assertion_line: 25
expression: info
---
Info {
    protocol: 17,
    name: "KarmaKrew Chernarus #1 EU - 1PP | VANILLA + MODS",
    map: "chernarusplus",
    folder: "dayz",
    game: "https://www.discord.gg/KarmaKrew",
    app_id: 0,
    players: 29,
    max_players: 110,
    bots: 0,
    server_type: Dedicated,
    server_os: Windows,
    visibility: false,
    vac: true,
    the_ship: None,
    version: "1.28.161464",
    edf: 177,
    extended_server_info: ExtendedServerInfo {
        port: Some(
            2302,
        ),
        steam_id: Some(
            90282730693992465,
        ),
        keywords: Some(
            "battleye,no3rd,external,privHive,shard100,lqs0,etm2.000000,entm11.000000,mod,06:54",
        ),
        game_id: Some(
            221100,
        ),
    },
    source_tv: None,
}
