crates/a2s/tests/snapshots/snapshot_test__0__193_25_252_72_27016_players.snap
---
source: crates/a2s/tests/snapshot_test.rs
assertion_line: 41
expression: players
---
[
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 23274.822,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 21923.473,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 14752.377,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 14184.167,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 12725.151,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 12305.471,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 12261.642,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 12059.68,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 10922.702,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 10897.872,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 10365.92,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 10029.583,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 9506.565,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 9031.394,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 8389.367,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 8017.043,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 7592.493,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 7264.1074,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 7114.2715,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 6785.4917,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 6744.452,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 6338.7437,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 4932.4585,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 4826.6714,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 4301.4063,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 3982.0757,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 3622.7317,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 3347.76,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2983.9805,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2938.4365,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2710.869,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2531.4448,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2355.917,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2214.3296,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2190.235,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2173.594,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2139.4482,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2129.5288,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2113.381,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2002.3906,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1813.2451,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1784.2455,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1453.457,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1377.439,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1228.9557,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1106.222,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 970.8708,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 849.7057,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 811.9884,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 810.4055,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 752.77954,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 634.5742,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 607.49725,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 425.212,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 228.76437,
        the_ship: None,
    },
]
